--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,7 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+*.css linguist-vendored
+*.scss linguist-vendored
 
 # Custom for Visual Studio
 *.cs     diff=csharp
